// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
Object {
  "expression": Object {
    "args": Array [
      Object {
        "args": Array [
          Object {
            "args": Array [
              Variable {
                "value": "a",
              },
            ],
            "operator": "bound",
            "type": "operation",
          },
        ],
        "operator": "!",
        "type": "operation",
      },
    ],
    "operator": "&&",
    "type": "operation",
  },
  "type": "filter",
}
`;

exports[`basic 2`] = `
Object {
  "expression": Object {
    "args": Array [
      Object {
        "args": Array [
          Variable {
            "value": "a",
          },
          Variable {
            "value": "b",
          },
        ],
        "operator": ">=",
        "type": "operation",
      },
    ],
    "operator": "&&",
    "type": "operation",
  },
  "type": "filter",
}
`;

exports[`basic 3`] = `
Object {
  "expression": Object {
    "args": Array [
      Object {
        "args": Array [
          Object {
            "args": Array [
              Variable {
                "value": "a",
              },
              Literal {
                "datatype": NamedNode {
                  "value": "http://www.w3.org/2001/XMLSchema#string",
                },
                "language": "",
                "value": "10",
              },
            ],
            "operator": ">=",
            "type": "operation",
          },
        ],
        "operator": "!",
        "type": "operation",
      },
    ],
    "operator": "&&",
    "type": "operation",
  },
  "type": "filter",
}
`;

exports[`basic 4`] = `
Object {
  "expression": Object {
    "args": Array [
      Object {
        "args": Array [
          Object {
            "args": Array [
              Variable {
                "value": "a",
              },
              NamedNode {
                "value": "http://example.com",
              },
              Literal {
                "datatype": NamedNode {
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
                },
                "language": "en",
                "value": "foo",
              },
            ],
            "operator": "in",
            "type": "operation",
          },
        ],
        "operator": "!",
        "type": "operation",
      },
    ],
    "operator": "&&",
    "type": "operation",
  },
  "type": "filter",
}
`;
